# anvil

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISCLAIMER.md  NOTICE  README.md  RELEASING.md  SECURITY.md  components.json  eslint.config.mjs  next.config.ts  package-lock.json  package.json  release.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/curriculum/: curriculum.json  pattern-pool.json
src-tauri/resources/presets/: blind75.json  neetcode150.json
src-tauri/src/: error.rs  lib.rs  state.rs
src-tauri/src/commands/: authoring.rs  course.rs  mod.rs  problems.rs  progress.rs  runner.rs  runtimes.rs
src-tauri/src/domain/: advancement.rs  complexity.rs  curriculum.rs  diagram.rs  draft.rs  lc_import.rs  lesson.rs  mastery.rs  mod.rs  pack.rs  preset.rs  problem.rs  progress.rs  quiz.rs  review.rs  run.rs  unit.rs
src-tauri/src/services/: advancement.rs  catalog.rs  curriculum.rs  example_parse.rs  import_export.rs  lc_import.rs  mod.rs  pack_store.rs  preset_store.rs  problem_store.rs  progress.rs  progression.rs  quiz.rs  review.rs  runtime_detect.rs
src-tauri/tests/: catalog_smoke.rs  closing_the_48_e2e.rs  db_persistence.rs  lc_import_e2e.rs  pack_materialization.rs  problem_store.rs  runner_complexity.rs  runner_entry_points.rs  runner_judges.rs  runner_node.rs  runner_python.rs  runtime_detection.rs  sandbox_hardening.rs  smoke.rs  status_mutations.rs  user_problems.rs
src-tauri/tests/common/: mod.rs
(+3349 files in other folders)
