[package]
name = "anvil"
version = "0.6.0"
description = "Anvil — offline-first desktop app for DSA / coding-interview practice"
authors = ["Kudzai P Matizirofa"]
license = "MIT"
repository = "https://github.com/kudzaiprichard/anvil"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
thiserror = "2"
tempfile = "3"
flate2 = "1"
ammonia = "4"
wait-timeout = "0.2"
rusqlite = { version = "0.37", features = ["bundled"] }
chrono = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
serde_yaml = "0.9.34"
rs-fsrs = "1.2.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_JobObjects",
  "Win32_System_Threading",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
